--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ local.properties
 .DS_Store
 # Android build files
 app/build/
+app/debug/
+app/release/
 app/intermediates/
 app/.gradle/
 app/local.properties
@@ -14,8 +16,6 @@ app/local.properties
 *.log
 *.tmp
 *.swp
-# Keystore files
-*.jks
 # Generated files
 app/generated/
 # OS-specific files
@@ -31,4 +31,7 @@ app/crashlytics-build.properties
 # Others
 captures/
 output.json
-
+# Keystore files
+*.jks
+*.keystore
+*.p12
