--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -34,6 +34,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
+      - name: Generate debug version info
+        id: version
+        run: |
+          COMMIT_SHORT=$(git rev-parse --short HEAD)
+          VERSION_NAME="debug-${COMMIT_SHORT}"
+          VERSION_CODE=${{ github.run_number }}
+          echo "version_name=$VERSION_NAME" >> $GITHUB_OUTPUT
+          echo "version_code=$VERSION_CODE" >> $GITHUB_OUTPUT
+
       - name: Decode google-services.json from secret
         run: |
           echo "$GOOGLE_SERVICES_JSON_BASE64" | base64 -d > app/google-services.json
@@ -41,7 +50,7 @@ jobs:
           GOOGLE_SERVICES_JSON_BASE64: ${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDebug -PversionName=${{ steps.version.outputs.version_name }} -PversionCode=${{ steps.version.outputs.version_code }}
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
