--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -35,6 +35,16 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
+      - name: Extract version from tag
+        id: version
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          VERSION_NAME=${TAG#v}
+          VERSION_CODE=${{ github.run_number }}
+          echo "version_name=$VERSION_NAME" >> $GITHUB_OUTPUT
+          echo "version_code=$VERSION_CODE" >> $GITHUB_OUTPUT
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+
       - name: Decode google-services.json from secret
         run: |
           echo "$GOOGLE_SERVICES_JSON_BASE64" | base64 -d > app/google-services.json
@@ -48,7 +58,7 @@ jobs:
           SOLICARE_KEYSTORE_BASE64: ${{ secrets.SOLICARE_KEYSTORE_BASE64 }}
 
       - name: Build Release APK
-        run: ./gradlew assembleRelease -PkeystoreFile=solicare-keystore.jks -PkeystorePassword=$SOLICARE_KEYSTORE_PASSWORD -PkeyAlias=$SOLICARE_KEY_ALIAS -PkeyPassword=$SOLICARE_KEY_PASSWORD
+        run: ./gradlew assembleRelease -PversionName=${{ steps.version.outputs.version_name }} -PversionCode=${{ steps.version.outputs.version_code }} -PkeystoreFile=solicare-keystore.jks -PkeystorePassword=$SOLICARE_KEYSTORE_PASSWORD -PkeyAlias=$SOLICARE_KEY_ALIAS -PkeyPassword=$SOLICARE_KEY_PASSWORD
         env:
           SOLICARE_KEYSTORE_PASSWORD: ${{ secrets.SOLICARE_KEYSTORE_PASSWORD }}
           SOLICARE_KEY_ALIAS: ${{ secrets.SOLICARE_KEY_ALIAS }}
