Feat: implement FCM token registration and notification channels

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:usesCleartextTraffic="true">
 
         <service
-            android:name=".presentation.service.FCMService"
+            android:name=".presentation.service.FirebaseCloudMessageService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
